--- a/notebooks/mlp_simple.ipynb
+++ b/notebooks/mlp_simple.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBXP4JwLw8R+4X6jRo1/Ll",
+      "authorship_tag": "ABX9TyOQ86yClIfL5701QkcQCmgC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "q9khvMzuf6hQ"
+        "id": "q9khvMzuf6hQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "288c3c79-6b7b-49a9-c387-dc68c361764d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TensorFlow: 2.19.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "import tensorflow as tf\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import time\n",
+        "print(\"TensorFlow:\", tf.__version__)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow import keras\n",
+        "(X_train, y_train), (X_test, y_test) =\n",
+        "keras.datasets.mnist.load_data()\n",
+        "X_train.shape, X_test.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 108
+        },
+        "id": "7EDbzij9gnqM",
+        "outputId": "adc6621e-6d24-4bea-b0bd-6c84742684a2"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-1926565318.py, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-1926565318.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    (X_train, y_train), (X_test, y_test) =\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     }
   ]
 }
